Bug 15639 - SMB3 POSIX Extensions statfs() is broken
Summary: SMB3 POSIX Extensions statfs() is broken
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.20.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-29 16:38 UTC by Ralph Böhme
Modified: 2025-11-27 16:24 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2024-04-29 16:38:30 UTC
Regression introduced by 55d98b29eb294542cc4947573f233e0d5e6966cb. Have fix, need bugnumber.
Comment 1 Samba QA Contact 2024-09-19 21:28:03 UTC
This bug was referenced in samba master:

7a440864dde9e9de8748b1e930bfa59f25eaf08a
Comment 2 Ralph Böhme 2024-12-07 09:51:41 UTC
@Jule: I guess we should provide a backport of this for 4.21.
Comment 3 Andreas Schneider 2025-11-27 16:24:40 UTC
Fixed with samba-4.22.0 or newer.